--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="...">Kunjungi Instagram Saya</a>
       <button id="sapaButton">Sapa Saya!</button>
     </div>
-    <img src="IMG_5495.jpg" alt="Foto Profil saya">
+    <img src="IMG_5495.JPG (aku latar biru).jpg" alt="Foto Profil saya">
     <hl>Nama Lengkap Anda</hl>
     <p>Siswa SMA yang tertarik dengan teknologi dan desain.
     Selamat datang di website pertama saya!</p>
