--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <button id="sapaButton">Sapa Saya!</button>
     </div>
     <img src="IMG_5495.JPG (aku latar biru).jpg" alt="Foto Profil saya">
-    <hl>Nama Lengkap Anda</hl>
+    <hl>Joy Heavenando Putra Vieco</hl>
     <p>Siswa SMA yang tertarik dengan teknologi dan desain.
     Selamat datang di website pertama saya!</p>
     <a 
