--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Profil Perhitungan hpp  [joy heavenando putra vieco]</title>
+    <title>Profil Perhitungan hpp</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
