--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <hl>Joy Heavenando Putra Vieco</hl>
     <p>Siswa SMA yang tertarik dengan teknologi dan desain.
     Selamat datang di website pertama saya!</p>
-    <a 
-      href="https://ww.instagram.com/Jnavcoo">Kunjungi Instagram Saya</a>
+    <a href="https://ww.instagram.com/Jnavcoo">Kunjungi Instagram Saya</a>
     </div>
     <script src="script.js"></script>
   </body>
