--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <button id="sapaButton">Sapa Saya!</button>
     </div>
     <img src="IMG_5495.JPG (aku latar biru).jpg" alt="Foto Profil saya">
-    <hl>Joy Heavenando Putra Vieco</hl>
+    <h1>Joy Heavenando Putra Vieco</h1>
     <p>Siswa SMA yang tertarik dengan teknologi dan desain.
     Selamat datang di website pertama saya!</p>
     <a href="https://ww.instagram.com/Jnavcoo">Kunjungi Instagram Saya</a>
